# RED3ext

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build.yml  clang-format.yml  release.yml
cmake/: ConfigureResourceRc.cmake  ConfigureVersionFromGit.cmake
cmake/templates/: Resource.rc.in
src/: CMakeLists.txt
src/core/: CMakeLists.txt  common.hpp  exception.hpp  message_box.hpp  movable_but_not_copyable.hpp  non_copyable.hpp  non_moveable.hpp  paths.cpp  paths.hpp  stdafx.hpp
src/core/detail/: basic_message_box.hpp
src/dll/: CMakeLists.txt  main.cpp  resource.hpp
src/loader/: CMakeLists.txt  loader.cpp  loader.hpp  main.cpp  main.def  proxy.cpp  proxy.hpp  proxy_handler.cpp  proxy_handler.hpp  stdafx.hpp
src/loader/proxies/: d3d11_proxy.cpp  d3d11_proxy.hpp  d3d11_proxy_functions.cpp  d3d11_proxy_functions.hpp  dxgi_proxy.cpp  dxgi_proxy.hpp  dxgi_proxy_functions.cpp  dxgi_proxy_functions.hpp  version_proxy.cpp  version_proxy.hpp  version_proxy_functions.cpp  version_proxy_functions.hpp  winmm_proxy.cpp  winmm_proxy.hpp  winmm_proxy_functions.cpp  winmm_proxy_functions.hpp
src/ported/: Addresses.hpp  App.cpp  App.hpp  CMakeLists.txt  Config.cpp  Config.hpp  DetourTransaction.cpp  DevConsole.cpp  FileVer.cpp  FileVer.hpp  Image.cpp  Image.hpp  Paths.cpp  Paths.hpp  Plugin.cpp  Plugin.hpp  README.md  Utils.cpp  Utils.hpp  Version.hpp  Version.hpp.in  stdafx.hpp
src/ported/Hooks/: CRunningState_Hooks.cpp  Main_Hooks.cpp
src/ported/Systems/: ESystemType.hpp  PluginSystem.cpp  PluginSystem.hpp
